[package]
name = "sqlx-core2"
version = "0.4.0-beta.2"
edition = "2018"
authors = [
    "Ryan Leckey <leckey.ryan@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
    "Chloe Ross <orangesnowfox@gmail.com>",
    "Daniel Akhterov <akhterovd@gmail.com>",
]

[features]
runtime-async-std = [ "sqlx-rt/runtime-async-std" ]
runtime-tokio = [ "sqlx-rt/runtime-tokio" ]
runtime-actix = [ "sqlx-rt/runtime-actix" ]

[dependencies]
bytes = "0.5.6"
thiserror = "1.0.20"
sqlx-rt = { path = "../sqlx-rt", version = "0.1.1" }
futures-core = "0.3.5"
