[package]
name = "sqlx-macros"
description = "Macros for SQLx, the rust SQL toolkit. Not intended to be used directly."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[features]

# for conditional compilation
_rt-async-std = ["sqlx-macros-core/_rt-async-std"]
_rt-tokio = ["sqlx-macros-core/_rt-tokio"]

_tls-native-tls = ["sqlx-macros-core/_tls-native-tls"]
_tls-rustls = ["sqlx-macros-core/_tls-rustls"]

# SQLx features
migrate = ["sqlx-macros-core/migrate"]

# database
mysql = ["sqlx-macros-core/mysql"]
postgres = ["sqlx-macros-core/postgres"]
sqlite = ["sqlx-macros-core/sqlite"]

# type
bigdecimal = ["sqlx-macros-core/bigdecimal"]
bit-vec = ["sqlx-macros-core/bit-vec"]
chrono = ["sqlx-macros-core/chrono"]
ipnetwork = ["sqlx-macros-core/ipnetwork"]
mac_address = ["sqlx-macros-core/mac_address"]
rust_decimal = ["sqlx-macros-core/rust_decimal"]
time = ["sqlx-macros-core/time"]
uuid = ["sqlx-macros-core/uuid"]
json = ["sqlx-macros-core/json"]

[dependencies]
sqlx-core = { version = "=0.6.2", default-features = false, features = ["any"], path = "../sqlx-core" }
sqlx-macros-core = { version = "=0.6.2", path = "../sqlx-macros-core" }

proc-macro2 = { version = "1.0.36", default-features = false }
syn = { version = "1.0.84", default-features = false, features = ["full"] }
quote = { version = "1.0.14", default-features = false }
