[package]
name = "sqlx-macros"
version = "0.6.3"
repository = "https://github.com/launchbadge/sqlx"
description = "Macros for SQLx, the rust SQL toolkit. Not intended to be used directly."
license = "MIT OR Apache-2.0"
edition = "2021"
authors = [
    "Ryan Leckey <leckey.ryan@gmail.com>",
    "Austin Bonander <austin.bonander@gmail.com>",
    "Chloe Ross <orangesnowfox@gmail.com>",
    "Daniel Akhterov <akhterovd@gmail.com>",
] # daniel@launchbadge.com

[lib]
proc-macro = true

[features]
default = ["runtime-tokio-native-tls", "migrate"]
migrate = ["sha2", "sqlx-core/migrate"]

# runtimes
runtime-actix-native-tls = ["runtime-tokio-native-tls"]
runtime-async-std-native-tls = [
    "sqlx-core/runtime-async-std-native-tls",
    "sqlx-rt/runtime-async-std-native-tls",
    "_rt-async-std",
]
runtime-tokio-native-tls = [
    "sqlx-core/runtime-tokio-native-tls",
    "sqlx-rt/runtime-tokio-native-tls",
    "_rt-tokio",
]

runtime-actix-rustls = ["runtime-tokio-rustls"]
runtime-async-std-rustls = [
    "sqlx-core/runtime-async-std-rustls",
    "sqlx-rt/runtime-async-std-rustls",
    "_rt-async-std",
]
runtime-tokio-rustls = [
    "sqlx-core/runtime-tokio-rustls",
    "sqlx-rt/runtime-tokio-rustls",
    "_rt-tokio",
]

# for conditional compilation
_rt-async-std = []
_rt-tokio = []

# offline building support
offline = ["sqlx-core/offline", "hex", "serde", "serde_json", "sha2"]

# database
mysql = ["sqlx-core/mysql"]
postgres = ["sqlx-core/postgres"]
sqlite = ["sqlx-core/sqlite"]
mssql = ["sqlx-core/mssql"]

# type
bigdecimal = ["sqlx-core/bigdecimal"]
decimal = ["sqlx-core/decimal"]
chrono = ["sqlx-core/chrono"]
time = ["sqlx-core/time"]
ipnetwork = ["sqlx-core/ipnetwork"]
mac_address = ["sqlx-core/mac_address"]
uuid = ["sqlx-core/uuid"]
bit-vec = ["sqlx-core/bit-vec"]
json = ["sqlx-core/json", "serde_json"]

[dependencies]
dotenvy = { version = "0.15.0", default-features = false }
hex = { version = "0.4.3", optional = true }
heck = { version = "0.4", features = ["unicode"] }
either = "1.6.1"
once_cell = "1.9.0"
proc-macro2 = { version = "1.0.36", default-features = false }
sqlx-core = { version = "0.6.3", default-features = false, features = ["any"], path = "../sqlx-core" }
sqlx-rt = { version = "0.6.3", default-features = false, path = "../sqlx-rt" }
serde = { version = "1.0.132", features = ["derive"], optional = true }
serde_json = { version = "1.0.73", optional = true }
sha2 = { version = "0.10.0", optional = true }
quote = { version = "1.0.14", default-features = false }
url = { version = "2.2.2", default-features = false }

[dependencies.syn]
# This is basically default features plus "full" but if they add more defaults later then we don't need to enable those.
version = "1.0.109"
default-features = false
features = ["full", "parsing", "printing", "derive", "clone-impls", "proc-macro"]
