[package]
name = "sqlx-mysql"
documentation = "https://docs.rs/sqlx"
description = "MySQL driver implementation for SQLx. Not for direct use; see the `sqlx` crate for details."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
json = ["sqlx-core/json", "serde"]
any = ["sqlx-core/any"]
offline = ["sqlx-core/offline", "serde/derive"]
migrate = ["sqlx-core/migrate"]

[dependencies]
sqlx-core = { workspace = true }

# Futures crates
futures-channel = { version = "0.3.26", default-features = false, features = ["sink", "alloc", "std"] }
futures-core = { version = "0.3.26", default-features = false }
futures-io = "0.3.26"
futures-util = { version = "0.3.26", default-features = false, features = ["alloc", "sink", "io"] }

# Cryptographic Primitives
crc = "3.0.1"
digest = { version = "0.10.6", default-features = false, features = ["std"] }
hkdf = "0.12.3"
hmac = { version = "0.12.1", default-features = false }
md-5 = { version = "0.10.5", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
rsa = "0.8.1"
sha1 = { version = "0.10.5", default-features = false }
sha2 = { version = "0.10.6", default-features = false }

# Type Integrations (versions inherited from `[workspace.dependencies]`)
bigdecimal = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
time = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# Misc
atoi = "2.0"
base64 = { version = "0.21.0", default-features = false, features = ["std"] }
bitflags = { version = "1.3.2", default-features = false }
byteorder = { version = "1.4.3", default-features = false, features = ["std"] }
bytes = "1.4.0"
dotenvy = "0.15.6"
dirs = "4.0.0"
either = "1.8.1"
generic-array = { version = "0.14.6", default-features = false }
hex = "0.4.3"
itoa = "1.0.5"
log = "0.4.17"
memchr = { version = "2.5.0", default-features = false }
once_cell = "1.17.1"
percent-encoding = "2.2.0"
smallvec = "1.10.0"
stringprep = "0.1.2"
thiserror = "1.0.38"
tracing = { version = "0.1.37", features = ["log"] }
whoami = { version = "1.3.0", default-features = false }

serde = { version = "1.0.152", optional = true }
