[package]
name = "sqlx-postgres-mock"
version = "0.0.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Mock the PostgreSQL wire protocol. Used internally to test and benchmark sqlx."
edition = "2018"

[dependencies]
runtime = "=0.3.0-alpha.4"
futures-preview = "=0.3.0-alpha.16"
failure = "0.1"
