[package]
name = "sqlx-postgres-protocol"
version = "0.0.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Provides standalone encoding and decoding of the PostgreSQL v3 wire protocol."
edition = "2018"

[dependencies]
byteorder = "1.3.2"
bytes = "0.4.12"
memchr = "2.2.1"
md-5 = "0.8.0"
itoa = "0.4.4"
hex = "0.3.2"
log = "0.4.7"

[dev-dependencies]
matches = "0.1.8"
criterion = "0.2.11"

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false
