[package]
name = "sqlx-postgres"
documentation = "https://docs.rs/sqlx"
description = "PostgreSQL driver implementation for SQLx. Not for direct use; see the `sqlx` crate for details."
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
any = ["sqlx-core/any"]
json = ["sqlx-core/json"]
migrate = ["sqlx-core/migrate"]
offline = ["sqlx-core/offline"]

# Type integration features which require additional dependencies
rust_decimal = ["dep:rust_decimal", "dep:num-bigint"]

[dependencies]
# Futures crates
futures-channel = { version = "0.3.26", default-features = false, features = ["sink", "alloc", "std"] }
futures-core = { version = "0.3.26", default-features = false }
futures-io = "0.3.26"
futures-util = { version = "0.3.26", default-features = false, features = ["alloc", "sink", "io"] }

# Cryptographic Primitives
crc = "3.0.1"
hkdf = "0.12.3"
hmac = { version = "0.12.1", default-features = false }
md-5 = { version = "0.10.5", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
sha1 = { version = "0.10.5", default-features = false }
sha2 = { version = "0.10.6", default-features = false }

# Type Integrations (versions inherited from `[workspace.dependencies]`)
bigdecimal = { workspace = true, optional = true }
bit-vec = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
ipnetwork = { workspace = true, optional = true }
mac_address = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
time = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# Misc
atoi = "2.0"
base64 = { version = "0.21.0", default-features = false, features = ["std"] }
bitflags = { version = "1.3.2", default-features = false }
byteorder = { version = "1.4.3", default-features = false, features = ["std"] }
dirs = "4.0.0"
dotenvy = { workspace = true }
hex = "0.4.3"
itoa = "1.0.5"
log = "0.4.17"
memchr = { version = "2.5.0", default-features = false }
num-bigint = { version = "0.4.3", optional = true }
once_cell = "1.17.1"
smallvec = "1.10.0"
stringprep = "0.1.2"
thiserror = "1.0.38"
tracing = { version = "0.1.37", features = ["log"] }
whoami = { version = "1.3.0", default-features = false }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93", features = ["raw_value"] }

[dependencies.sqlx-core]
workspace = true
# We use JSON in the driver implementation itself so there's no reason not to enable it here.
features = ["json"]
